# fraud_txns_simulator

./: .gitignore  CreateDropTxn_scratch.py  DropConfigs.py  Drops_development.py  LICENSE.md  README.EN.md  README.md  accounts_generation.py  inject_minimal_styles.py  nbconvert_cfg.py  pyproject.toml  requirements-conda.txt  requirements-pip-list.txt  requirements.txt  run.py  run_generator.py  scratch_pad_legit.py  scratchpad.py  setup.py
config/: base.yaml  compr.yaml  drops.yaml  fraud.yaml  legit.yaml  time.yaml
data_generator/: recorder.py  utils.py  validator.py
data_to_db/: base.py
diagrams/: fraud_rates.excalidraw  generator_diagram_04-08_2200.excalidraw
docs/: 01_Главная_страница_проекта_af01.html  01_Очистка_данных.html  02_Генерация_гео_данных.html  02_Страница_генератора_транзакций.html  03_Генерация_легальных_транзакций.html  03_Создание_оффлайн_мерчантов_и_клиентов.html  04_Compromised_client_fraud.html  04_Создание_ip_адресов.html  05_Дропы.html  05_Устройства_и_онлайн_мерчанты.html  06_Базовая_генерация_времени.html  06_Объединение_всего_в_цельный_генератор.html  07_generator_configs_and_start.html  07_Создание_дополнительных_данных.html  08_Генерация_легальных_транзакций.html  09_drop_core_tools.ipynb.html  09_Генерация_compromised_clients_фрода.html  10_drop_txn_generation.html  10_Дроп_фрод_основные_инструменты.ipynb.html  11_data_to_sql_db.html  11_drop_activity_simulation.html  11_Дропы_генерация_транзакций.html  12_other_tools.html  12_Дропы_симуляция_активности.html  13_Объединение_всех_видов_генерации.html  14_Загрузка_данных_в_SQL_БД.html  (+2 more)
(+233 files in other folders)
